<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        app:layout_constraintVertical_bias="0.089" />

    <LinearLayout
        android:id="@+id/lnLay01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/edTextUsername"
            android:hint="@string/label_username"
            android:layout_width="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edTextPassword"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_connect"/>
        <TextView
            android:id="@+id/txt_rgst_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:textColor="@color/material_dynamic_tertiary50"
            android:text="@string/text_idh_account"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>