<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <!-- Título -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_options"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <!-- Botão Editar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_secret"
        android:layout_width="match_parent"
        android:text="@string/label_edit"
        android:textColor="@android:color/black"
        app:cornerRadius="2dp"
        app:iconTint="@color/black"
        app:icon="@drawable/baseline_edit_24"
        android:background="@color/transparent"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_height="wrap_content"/>

    <!-- Botão Deletar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_delete"
        android:backgroundTint="#D32F2F"
        app:cornerRadius="2dp"
        app:iconTint="@color/white"
        app:icon="@drawable/baseline_remove_red_eye_24"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"/>
</LinearLayout>