<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/msg_confirm_decision"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:paddingTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <Button
                android:id="@+id/btn_decision_cancel"
                android:text="@string/label_cancel"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:layout_width="wrap_content"

                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_decision_confirm"
                android:text="@string/label_confirm"
                android:textColor="@color/black"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>